--- a/login.html
+++ b/login.html
@@ -4,16 +4,25 @@
 	<title>Illinois Tech Login Page</title>
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-	<!-- <link rel="stylesheet" href="screen.css" /> -->
+	<link rel="stylesheet" href="screen.css" />
 </head>
 <body>
 	<section class="box">
 		<h1>Illinois Tech</h1>
-	
 	</section>
 	
-	<section class = "form">
+	<section class ="form">
 		<h2>Login Here.</h2>
+		<form action="form-handling-page" method="post">
+		
+			<label for="name">Username : </label>
+			<input type="text" id="name" name="Username" />
+			
+			<label for "pass">Password :</label>
+			<input type="password" id="pass" name="Password" />
+			
+			<button type="submit">Login</button>
+		</form>
 	</section>
 	<script src="somethinghere.js"> </script>
 </body>
