--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 	<title>Illinois Tech Login Page</title>
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
-	<link rel="stylesheet" href="screen.css" />
+	<link rel="stylesheet" href="css/screen.css" />
 </head>
 <body>
 	<section class="box">
