syntax change on label

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 			<label for="name">Username : </label>
 			<input type="text" id="name" name="Username" />
 			
-			<label for "pass">Password :</label>
+			<label for="pass">Password :</label>
 			<input type="password" id="pass" name="Password" />
 			
 			<button type="submit">Login</button>
