--- a/login.html
+++ b/login.html
@@ -8,10 +8,14 @@
 </head>
 <body>
 	<section class="box">
-		<h1>Illinois Tech</h1>
+		<picture>
+			<source srcset="img/myiit-logo.png">
+			<img src="img/myiit-logo.png" alt="MyIIT Logo">
+		</picture>
+		<h1>MyIIT Login</h1>
 	</section>
 	
-	<section class ="form">
+	<section class ="login">
 		<h2>Login Here.</h2>
 		<form action="form-handling-page" method="post">
 		
