Added In-line Links to welcome & registration tab

--- a/welcome.html
+++ b/welcome.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Illinois Tech Login Page</title>
+	<title>Illinois Tech Welcome Page</title>
 	<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no"/>
 	<link rel="stylesheet" href="css/screen.css" />
 </head>
 <body>
-	<section class="">
-		<h1>Welcome!</h1>
+	<section class="header">
+		<header>
 		<picture>
-		
+			<source srcset="img/myiit-logo.png">
+			<img src="img/myiit-logo.png" alt="myIIT logo">
 		</picture>
+		</header>
 	</section>
+		<h1>Welcome!</h1>
 	
-	<section class ="">
-		
-		
-		
-	</section>
-	<script src="somethinghere.js"> </script>
+	<nav>
+		<ul>
+		<li><a href="welcome.html">Welcome</a></li>
+		<li><a href="registration.html">Class Registration</a></li>
+		<li><a href="academics.html">Academics</a></li>
+		<li><a href="finance.html">Finance</a></li>
+		<!-- Gmail / Blackboard Below -->
+		<li><a href="mail.google.com">Gmail</a></li>
+		<li><a href="blackboard.iit.edu">Blackboard</a></li>
+		<li><a href="#">Logout</a></li>
+		<!-- Logout needs PHP -->
+	</nav>
+		<script src="somethinghere.js"> </script>
 </body>
 </html>
