Added sections needed for these two, will complete soon.

--- a/registration.html
+++ b/registration.html
@@ -28,7 +28,15 @@
 		<li><a href="#">Logout</a></li>
 		<!-- Logout needs PHP -->
 	</nav>
+	<section class="registration-id">
 	
+	</section>
+	<section class="degree-works">
+	
+	</section>
+	<section class="registration-tools">
+	
+	</section>
 	
 		<script src="somethinghere.js"> </script>
 </body>
