--- a/welcome.html
+++ b/welcome.html
@@ -29,6 +29,19 @@
 		<li><a href="#">Logout</a></li>
 		<!-- Logout needs PHP -->
 	</nav>
+	<section class="weather">
+	
+	</section>
+	<section class="phonebook">
+	<!-- also has student resources from the academics tab in here -->
+	</section>
+	<section class="safety">
+	
+	</section>
+	<section class="community-service">
+	
+	</section>
+	
 		<script src="somethinghere.js"> </script>
 </body>
 </html>
