--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
 	
 	<div class="form">
 	<form>
-  		Username/Email:<br>
-  		<input type="text" placeholder="Username/Email"
-  		<br><br>
-  		Password:<br>
-  		<input type="text" placeholder="Password"
-  		<br><br><br>
-  		<input type="submit" value="Login">
+  		<label for="username">Username/Email:</label>
+  		<input type="text" placeholder="Username/Email">
+  		<label for="password">Password:</label>
+  		<input type="text" placeholder="Password">
+  		<button type="submit">Login</button>
 	</form>
 	</div>
 </div>
