Adjusted for pseudo log-out function

--- a/welcome.html
+++ b/welcome.html
@@ -9,25 +9,23 @@
 <body>
 	<section class="header">
 		<header>
+			<h1 class="home">Home Page</h1>
 		<picture>
 			<source srcset="img/myiit-logo.png">
 			<img src="img/myiit-logo.png" alt="myIIT logo">
 		</picture>
 		</header>
 	</section>
-		<h1>Welcome!</h1>
-	
 	<nav>
 		<ul>
-		<li><a href="welcome.html">Welcome</a></li>
+		<li><a href="welcome.html">Home Page</a></li>
 		<li><a href="registration.html">Class Registration</a></li>
 		<li><a href="academics.html">Academics</a></li>
 		<li><a href="finance.html">Finance</a></li>
 		<!-- Gmail / Blackboard Below -->
 		<li><a href="mail.google.com">Gmail</a></li>
 		<li><a href="blackboard.iit.edu">Blackboard</a></li>
-		<li><a href="#">Logout</a></li>
-		<!-- Logout needs PHP -->
+		<li><a href="index.html">Logout</a></li>
 	</nav>
 	<section class="weather">
 	
