--- a/registration.html
+++ b/registration.html
@@ -15,18 +15,16 @@
 		</picture>
 		</header>
 	</section>
-		<h1>Welcome!</h1>
 	<nav>
 		<ul>
-		<li><a href="welcome.html">Welcome</a></li>
+		<li><a href="welcome.html">Home Page</a></li>
 		<li><a href="registration.html">Class Registration</a></li>
 		<li><a href="academics.html">Academics</a></li>
 		<li><a href="finance.html">Finance</a></li>
 		<!-- Gmail / Blackboard Below -->
-		<li><a href="mail.google.com">Gmail</a></li>
-		<li><a href="blackboard.iit.edu">Blackboard</a></li>
-		<li><a href="#">Logout</a></li>
-		<!-- Logout needs PHP -->
+		<li><a href="https://mail.google.com">Gmail</a></li>
+		<li><a href="https://blackboard.iit.edu">Blackboard</a></li>
+		<li><a href="index.html">Logout</a></li>
 	</nav>
 	<section class="registration-id">
 	
