Fixed Styling sheet for home page and welcome page

--- a/registration.html
+++ b/registration.html
@@ -9,6 +9,7 @@
 <body>
 	<section class="header">
 		<header>
+			<h1 class="home">Registration</h1>
 		<picture>
 			<source srcset="img/myiit-logo.png">
 			<img src="img/myiit-logo.png" alt="myIIT logo">
@@ -37,5 +38,6 @@
 	</section>
 	
 		<script src="somethinghere.js"> </script>
+		
 </body>
 </html>
