--- a/welcome.html
+++ b/welcome.html
@@ -27,6 +27,8 @@
 		<li><a href="blackboard.iit.edu">Blackboard</a></li>
 		<li><a href="index.html">Logout</a></li>
 	</nav>
+
+	<!--carousel for news-->
 	<section class="weather">
 	
 	</section>
