--- a/home.html
+++ b/home.html
@@ -18,8 +18,8 @@
 	</section>
 	<nav>
 		<ul>
-		<li><a href="welcome.html">Home Page</a></li>
-		<li><a href="registration.html">Academics</a></li>
+		<li><a href="home.html">Home Page</a></li>
+		<li><a href="academics.html">Academics</a></li>
 		<li><a href="finance.html">Finance</a></li>
 		<!-- Gmail / Blackboard Below -->
 		<li><a href="mail.google.com">Gmail</a></li>
