reverted form action to go to welcome.html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<h2>Illinois Tech Account Login</h2>
 	
 	<div class="form">
-	<form  action="home.html">
+	<form  action="welcome.html">
   		<label for="username">Username/Email:</label>
   		<input type="text" placeholder="Username/Email">
   		<label for="password">Password:</label>
