Added Undergrad/Graduate Degree Works

--- a/registration.html
+++ b/registration.html
@@ -9,7 +9,7 @@
 <body>
 	<section class="header">
 		<header>
-			<h1 class="home">Registration</h1>
+			<h1 class="home">Academics</h1>
 		<picture>
 			<source srcset="img/myiit-logo.png">
 			<img src="img/myiit-logo.png" alt="myIIT logo">
@@ -27,13 +27,22 @@
 		<li><a href="index.html">Logout</a></li>
 	</nav>
 	<section class="registration-id">
-	
+		<!-- Contains a drop-down menu, shows the Registration PIN for the varying semesters -->'
+		
 	</section>
 	<section class="degree-works">
-	
+	<ul>
+		<li><a href="https://degreeworks.iit.edu/dwdev/IRISLink.cgi?CAS=ENABLED&SERVICE=LOGON&SCRIPT=SD2WORKS&">Undergraduate Degree Works</a></li>
+		<li><a href="https://degreeworks-g.iit.edu/IRISLink.cgi?CAS=ENABLED&SERVICE=LOGON&SCRIPT=SD2WORKS&">Graduate Degree Works</a></li>
+	<ul>
 	</section>
 	<section class="registration-tools">
-	
+	<ul>
+		<li><a href="">Search Classes</a></li>
+		<li><a href=" ">Add/Drop Classes</a></li> 
+		
+		<!-- Add/Drop Classes should allow you to check status, time, & location.  -->
+	</ul>
 	</section>
 	
 		<script src="somethinghere.js"> </script>
