added the section of Registration tools and academic profile

--- a/registration.html
+++ b/registration.html
@@ -27,13 +27,24 @@
 		<li><a href="index.html">Logout</a></li>
 	</nav>
 	<section class="registration-id">
-	
-	</section>
-	<section class="degree-works">
+	<span>Academic Profile</span>
+	<ul>
+	<li>Student Grade</li>
+	<li>Academic Advisor</li>
+	<li>Course Evaluation</li>
+	<li>Degree Work</li>
+	</ul>
 	
 	</section>
 	<section class="registration-tools">
-	
+	<span>Registration Tools</span>
+	<ul>
+	<li>Registration Status</li>
+	<li>Look Up classes</li>
+	<li>Add or Drop Classes</li>
+	<li>Change Class Options</li>
+	</ul>
+
 	</section>
 	
 		<script src="somethinghere.js"> </script>
