--- a/welcome.html
+++ b/welcome.html
@@ -29,18 +29,27 @@
 	</nav>
 
 	<!--carousel for news-->
+	<div class="news">
+		
+		<span>IIT News</span>
+			
+	
+	
+		<ul>
+		<li> President</li>
+		<li> President1</li>
+		<li> President2</li>
+		</ul>
+		
+	</div>
+		
 	<section class="weather">
 	
 	</section>
 	<section class="phonebook">
 	<!-- also has student resources from the academics tab in here -->
 	</section>
-	<section class="safety">
-	
-	</section>
-	<section class="community-service">
-	
-	</section>
+
 	
 		<script src="somethinghere.js"> </script>
 </body>
