added the section of Registration tools and academic profile

--- a/registration.html
+++ b/registration.html
@@ -39,10 +39,8 @@
 	<section class="registration-tools">
 	<span>Registration Tools</span>
 	<ul>
-	<li>Registration Status</li>
+	<li>Register for Class</li>
 	<li>Look Up classes</li>
-	<li>Add or Drop Classes</li>
-	<li>Change Class Options</li>
 	</ul>
 
 	</section>
